Clean up codebase: Remove unused agents, simplify to OpenAI WebSearchTool only
- Removed Anthropic and legacy OpenAI agents
- Kept only working OpenAI WebSearchTool implementation
- Simplified configuration and requirements
- Updated documentation to reflect WebSearchTool focus
- Cleaned up test files and kept only working versions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,10 @@
-# AI Provider Configuration
-# Options: "openai", "openai-websearch", or "anthropic"
-# - "openai": Standard OpenAI agent with custom tools
-# - "openai-websearch": OpenAI agent with WebSearchTool (real-time web search)
-# - "anthropic": Anthropic Claude agent
-AI_PROVIDER=openai-websearch
-
-# OpenAI Configuration (if using OpenAI)
+# OpenAI Configuration (Required)
 OPENAI_API_KEY=your-openai-api-key-here
 
-# Anthropic Configuration (if using Anthropic)
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-
-# Server Configuration
+# Server Configuration (Optional)
 HOST=0.0.0.0
 PORT=8000
 DEBUG=True
 
-# CORS Configuration
+# CORS Configuration (Optional)
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
